Projeto_Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AT
    EXTERNAL
    FILE
    GOTO
    IMPLEMENTATION
    INTERFACE
    LABEL
    LBRACK2
    LCURLY
    NOT
    PACKED
    POINTER
    RBRACK2
    RCURLY
    UNIT
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> programHeading block DOT
Rule 2     programHeading -> PROGRAM identifier SEMI
Rule 3     identifier -> IDENT
Rule 4     block -> declarations compoundStatement
Rule 5     declarations -> declaration declarations
Rule 6     declarations -> empty
Rule 7     declaration -> constantDefinitionBlock
Rule 8     declaration -> typeDeclarationBlock
Rule 9     declaration -> variableDeclarationBlock
Rule 10    declaration -> procedureAndFunctionDeclarationBlock
Rule 11    constantDefinitionBlock -> CONST constantDefinitionList
Rule 12    constantDefinitionList -> constantDefinitionList constantDefinition SEMI
Rule 13    constantDefinitionList -> constantDefinition SEMI
Rule 14    constantDefinition -> identifier EQUAL constant
Rule 15    constant -> unsignedNumber
Rule 16    constant -> sign unsignedNumber
Rule 17    constant -> identifier
Rule 18    constant -> sign identifier
Rule 19    constant -> string
Rule 20    constant -> constantChr
Rule 21    unsignedNumber -> unsignedInteger
Rule 22    unsignedNumber -> unsignedReal
Rule 23    unsignedInteger -> NUM_INT
Rule 24    unsignedReal -> NUM_REAL
Rule 25    sign -> PLUS
Rule 26    sign -> MINUS
Rule 27    string -> STRING_LITERAL
Rule 28    constantChr -> CHR LPAREN unsignedInteger RPAREN
Rule 29    typeDeclarationBlock -> TYPE typeDefinitionList
Rule 30    typeDefinitionList -> typeDefinitionList typeDefinition SEMI
Rule 31    typeDefinitionList -> typeDefinition SEMI
Rule 32    typeDefinition -> identifier EQUAL type_
Rule 33    type_ -> scalarType
Rule 34    type_ -> subrangeType
Rule 35    type_ -> typeIdentifier
Rule 36    type_ -> stringType
Rule 37    type_ -> arrayType
Rule 38    scalarType -> LPAREN identifierList RPAREN
Rule 39    identifierList -> identifierList COMMA identifier
Rule 40    identifierList -> identifier
Rule 41    subrangeType -> unsignedInteger DOTDOT unsignedInteger
Rule 42    identifierType -> IDENT
Rule 43    stringType -> STRING LBRACK unsignedInteger RBRACK
Rule 44    structuredType -> arrayType
Rule 45    structuredType -> recordType
Rule 46    structuredType -> setType
Rule 47    arrayType -> ARRAY LBRACK subrangeType RBRACK OF typeIdentifier
Rule 48    typeList -> typeList COMMA indexType
Rule 49    typeList -> indexType
Rule 50    indexType -> simpleType
Rule 51    simpleType -> identifierType
Rule 52    recordType -> RECORD fieldList END
Rule 53    fieldList -> fixedPart
Rule 54    fieldList -> fixedPart SEMI variantPart
Rule 55    fieldList -> variantPart
Rule 56    fixedPart -> recordSectionList
Rule 57    recordSectionList -> recordSectionList SEMI recordSection
Rule 58    recordSectionList -> recordSection
Rule 59    recordSection -> identifierList COLON type_
Rule 60    variantPart -> CASE tag OF variantList
Rule 61    tag -> identifier COLON typeIdentifier
Rule 62    tag -> typeIdentifier
Rule 63    typeIdentifier -> identifier
Rule 64    typeIdentifier -> INTEGER
Rule 65    typeIdentifier -> REAL
Rule 66    typeIdentifier -> BOOLEAN
Rule 67    typeIdentifier -> CHAR
Rule 68    typeIdentifier -> STRING
Rule 69    variantList -> variantList SEMI variant
Rule 70    variantList -> variant
Rule 71    variant -> constList COLON LPAREN fieldList RPAREN
Rule 72    constList -> constList COMMA constant
Rule 73    constList -> constant
Rule 74    setType -> SET OF baseType
Rule 75    baseType -> simpleType
Rule 76    variableDeclarationBlock -> VAR variableDeclarationList SEMI
Rule 77    variableDeclarationList -> variableDeclarationList SEMI variableDeclaration
Rule 78    variableDeclarationList -> variableDeclaration
Rule 79    variableDeclaration -> identifierList COLON type_
Rule 80    procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI
Rule 81    procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI
Rule 82    procedureDeclaration -> PROCEDURE identifier SEMI block
Rule 83    procedureDeclaration -> PROCEDURE identifier formalParameterList_opt SEMI block
Rule 84    formalParameterList_opt -> formalParameterList
Rule 85    formalParameterList_opt -> empty
Rule 86    formalParameterList -> LPAREN formalParameterSectionList RPAREN
Rule 87    formalParameterSectionList -> formalParameterSectionList SEMI formalParameterSection
Rule 88    formalParameterSectionList -> formalParameterSection
Rule 89    formalParameterSection -> parameterGroup
Rule 90    formalParameterSection -> VAR parameterGroup
Rule 91    formalParameterSection -> FUNCTION parameterGroup
Rule 92    formalParameterSection -> PROCEDURE parameterGroup
Rule 93    parameterGroup -> identifierList COLON typeIdentifier
Rule 94    functionDeclaration -> FUNCTION identifier formalParameterList_opt COLON resultType SEMI block
Rule 95    resultType -> typeIdentifier
Rule 96    compoundStatement -> BEGIN statements END
Rule 97    statements -> statementList
Rule 98    statementList -> statementList SEMI statement
Rule 99    statementList -> statement
Rule 100   statement -> simpleStatement
Rule 101   statement -> structuredStatement
Rule 102   simpleStatement -> callStatement
Rule 103   simpleStatement -> assignmentStatement
Rule 104   simpleStatement -> emptyStatement_
Rule 105   assignmentStatement -> variable ASSIGN Init_Final
Rule 106   variable -> identifier
Rule 107   variable -> indexedVariable
Rule 108   indexedVariable -> identifier LBRACK expression RBRACK
Rule 109   expression -> simpleExpression
Rule 110   expression -> simpleExpression relationalOperator simpleExpression
Rule 111   relationalOperator -> EQUAL
Rule 112   relationalOperator -> NOT_EQUAL
Rule 113   relationalOperator -> LT
Rule 114   relationalOperator -> LE
Rule 115   relationalOperator -> GT
Rule 116   relationalOperator -> GE
Rule 117   relationalOperator -> IN
Rule 118   simpleExpression -> term
Rule 119   simpleExpression -> sign term
Rule 120   simpleExpression -> simpleExpression additiveOperator term
Rule 121   additiveOperator -> PLUS
Rule 122   additiveOperator -> MINUS
Rule 123   additiveOperator -> OR
Rule 124   term -> factor
Rule 125   term -> term multiplicativeOperator factor
Rule 126   multiplicativeOperator -> STAR
Rule 127   multiplicativeOperator -> SLASH
Rule 128   multiplicativeOperator -> DIV
Rule 129   multiplicativeOperator -> MOD
Rule 130   multiplicativeOperator -> AND
Rule 131   factor -> variable
Rule 132   factor -> unsignedConstant
Rule 133   factor -> LPAREN expression RPAREN
Rule 134   unsignedConstant -> unsignedNumber
Rule 135   unsignedConstant -> string
Rule 136   unsignedConstant -> NIL
Rule 137   unsignedConstant -> TRUE
Rule 138   unsignedConstant -> FALSE
Rule 139   callStatement -> identifier
Rule 140   callStatement -> identifier LPAREN expressionList RPAREN
Rule 141   expressionList -> expressionList COMMA expression
Rule 142   expressionList -> expressionList COMMA formattedExpression
Rule 143   expressionList -> expression
Rule 144   expressionList -> formattedExpression
Rule 145   formattedExpression -> variable COLON expression COLON expression
Rule 146   formattedExpression -> variable COLON expression
Rule 147   emptyStatement_ -> <empty>
Rule 148   structuredStatement -> compoundStatement
Rule 149   structuredStatement -> conditionalStatement
Rule 150   structuredStatement -> loopStatement
Rule 151   loopStatement -> forStatement
Rule 152   loopStatement -> whileStatement
Rule 153   loopStatement -> repeatStatement
Rule 154   forStatement -> FOR identifier ASSIGN Init_Final TO Init_Final DO statement
Rule 155   forStatement -> FOR identifier ASSIGN Init_Final DOWNTO Init_Final DO statement
Rule 156   Init_Final -> callStatement
Rule 157   Init_Final -> expression
Rule 158   whileStatement -> WHILE expression DO statement
Rule 159   repeatStatement -> REPEAT statements UNTIL expression
Rule 160   conditionalStatement -> ifStatement
Rule 161   ifStatement -> IF expression THEN statement
Rule 162   ifStatement -> IF expression THEN statement ELSE statement
Rule 163   empty -> <empty>

Terminals, with rules where they appear

AND                  : 130
ARRAY                : 47
ASSIGN               : 105 154 155
AT                   : 
BEGIN                : 96
BOOLEAN              : 66
CASE                 : 60
CHAR                 : 67
CHR                  : 28
COLON                : 59 61 71 79 93 94 145 145 146
COMMA                : 39 48 72 141 142
CONST                : 11
DIV                  : 128
DO                   : 154 155 158
DOT                  : 1
DOTDOT               : 41
DOWNTO               : 155
ELSE                 : 162
END                  : 52 96
EQUAL                : 14 32 111
EXTERNAL             : 
FALSE                : 138
FILE                 : 
FOR                  : 154 155
FUNCTION             : 91 94
GE                   : 116
GOTO                 : 
GT                   : 115
IDENT                : 3 42
IF                   : 161 162
IMPLEMENTATION       : 
IN                   : 117
INTEGER              : 64
INTERFACE            : 
LABEL                : 
LBRACK               : 43 47 108
LBRACK2              : 
LCURLY               : 
LE                   : 114
LPAREN               : 28 38 71 86 133 140
LT                   : 113
MINUS                : 26 122
MOD                  : 129
NIL                  : 136
NOT                  : 
NOT_EQUAL            : 112
NUM_INT              : 23
NUM_REAL             : 24
OF                   : 47 60 74
OR                   : 123
PACKED               : 
PLUS                 : 25 121
POINTER              : 
PROCEDURE            : 82 83 92
PROGRAM              : 2
RBRACK               : 43 47 108
RBRACK2              : 
RCURLY               : 
REAL                 : 65
RECORD               : 52
REPEAT               : 159
RPAREN               : 28 38 71 86 133 140
SEMI                 : 2 12 13 30 31 54 57 69 76 77 80 81 82 83 87 94 98
SET                  : 74
SLASH                : 127
STAR                 : 126
STRING               : 43 68
STRING_LITERAL       : 27
THEN                 : 161 162
TO                   : 154
TRUE                 : 137
TYPE                 : 29
UNIT                 : 
UNTIL                : 159
VAR                  : 76 90
WHILE                : 158
WITH                 : 
error                : 

Nonterminals, with rules where they appear

Init_Final           : 105 154 154 155 155
additiveOperator     : 120
arrayType            : 37 44
assignmentStatement  : 103
baseType             : 74
block                : 1 82 83 94
callStatement        : 102 156
compoundStatement    : 4 148
conditionalStatement : 149
constList            : 71 72
constant             : 14 72 73
constantChr          : 20
constantDefinition   : 12 13
constantDefinitionBlock : 7
constantDefinitionList : 11 12
declaration          : 5
declarations         : 4 5
empty                : 6 85
emptyStatement_      : 104
expression           : 108 133 141 143 145 145 146 157 158 159 161 162
expressionList       : 140 141 142
factor               : 124 125
fieldList            : 52 71
fixedPart            : 53 54
forStatement         : 151
formalParameterList  : 84
formalParameterList_opt : 83 94
formalParameterSection : 87 88
formalParameterSectionList : 86 87
formattedExpression  : 142 144
functionDeclaration  : 81
identifier           : 2 14 17 18 32 39 40 61 63 82 83 94 106 108 139 140 154 155
identifierList       : 38 39 59 79 93
identifierType       : 51
ifStatement          : 160
indexType            : 48 49
indexedVariable      : 107
loopStatement        : 150
multiplicativeOperator : 125
parameterGroup       : 89 90 91 92
procedureAndFunctionDeclarationBlock : 10
procedureDeclaration : 80
program              : 0
programHeading       : 1
recordSection        : 57 58
recordSectionList    : 56 57
recordType           : 45
relationalOperator   : 110
repeatStatement      : 153
resultType           : 94
scalarType           : 33
setType              : 46
sign                 : 16 18 119
simpleExpression     : 109 110 110 120
simpleStatement      : 100
simpleType           : 50 75
statement            : 98 99 154 155 158 161 162 162
statementList        : 97 98
statements           : 96 159
string               : 19 135
stringType           : 36
structuredStatement  : 101
structuredType       : 
subrangeType         : 34 47
tag                  : 60
term                 : 118 119 120 125
typeDeclarationBlock : 8
typeDefinition       : 30 31
typeDefinitionList   : 29 30
typeIdentifier       : 35 47 61 62 93 95
typeList             : 48
type_                : 32 59 79
unsignedConstant     : 132
unsignedInteger      : 21 28 41 41 43
unsignedNumber       : 15 16 134
unsignedReal         : 22
variable             : 105 131 145 146
variableDeclaration  : 77 78
variableDeclarationBlock : 9
variableDeclarationList : 76 77
variant              : 69 70
variantList          : 60 69
variantPart          : 54 55
whileStatement       : 152

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . programHeading block DOT
    (2) programHeading -> . PROGRAM identifier SEMI

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    programHeading                 shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> programHeading . block DOT
    (4) block -> . declarations compoundStatement
    (5) declarations -> . declaration declarations
    (6) declarations -> . empty
    (7) declaration -> . constantDefinitionBlock
    (8) declaration -> . typeDeclarationBlock
    (9) declaration -> . variableDeclarationBlock
    (10) declaration -> . procedureAndFunctionDeclarationBlock
    (163) empty -> .
    (11) constantDefinitionBlock -> . CONST constantDefinitionList
    (29) typeDeclarationBlock -> . TYPE typeDefinitionList
    (76) variableDeclarationBlock -> . VAR variableDeclarationList SEMI
    (80) procedureAndFunctionDeclarationBlock -> . procedureDeclaration SEMI
    (81) procedureAndFunctionDeclarationBlock -> . functionDeclaration SEMI
    (82) procedureDeclaration -> . PROCEDURE identifier SEMI block
    (83) procedureDeclaration -> . PROCEDURE identifier formalParameterList_opt SEMI block
    (94) functionDeclaration -> . FUNCTION identifier formalParameterList_opt COLON resultType SEMI block

    BEGIN           reduce using rule 163 (empty -> .)
    CONST           shift and go to state 12
    TYPE            shift and go to state 13
    VAR             shift and go to state 14
    PROCEDURE       shift and go to state 17
    FUNCTION        shift and go to state 18

    block                          shift and go to state 4
    declarations                   shift and go to state 5
    declaration                    shift and go to state 6
    empty                          shift and go to state 7
    constantDefinitionBlock        shift and go to state 8
    typeDeclarationBlock           shift and go to state 9
    variableDeclarationBlock       shift and go to state 10
    procedureAndFunctionDeclarationBlock shift and go to state 11
    procedureDeclaration           shift and go to state 15
    functionDeclaration            shift and go to state 16

state 3

    (2) programHeading -> PROGRAM . identifier SEMI
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    identifier                     shift and go to state 19

state 4

    (1) program -> programHeading block . DOT

    DOT             shift and go to state 21


state 5

    (4) block -> declarations . compoundStatement
    (96) compoundStatement -> . BEGIN statements END

    BEGIN           shift and go to state 23

    compoundStatement              shift and go to state 22

state 6

    (5) declarations -> declaration . declarations
    (5) declarations -> . declaration declarations
    (6) declarations -> . empty
    (7) declaration -> . constantDefinitionBlock
    (8) declaration -> . typeDeclarationBlock
    (9) declaration -> . variableDeclarationBlock
    (10) declaration -> . procedureAndFunctionDeclarationBlock
    (163) empty -> .
    (11) constantDefinitionBlock -> . CONST constantDefinitionList
    (29) typeDeclarationBlock -> . TYPE typeDefinitionList
    (76) variableDeclarationBlock -> . VAR variableDeclarationList SEMI
    (80) procedureAndFunctionDeclarationBlock -> . procedureDeclaration SEMI
    (81) procedureAndFunctionDeclarationBlock -> . functionDeclaration SEMI
    (82) procedureDeclaration -> . PROCEDURE identifier SEMI block
    (83) procedureDeclaration -> . PROCEDURE identifier formalParameterList_opt SEMI block
    (94) functionDeclaration -> . FUNCTION identifier formalParameterList_opt COLON resultType SEMI block

    BEGIN           reduce using rule 163 (empty -> .)
    CONST           shift and go to state 12
    TYPE            shift and go to state 13
    VAR             shift and go to state 14
    PROCEDURE       shift and go to state 17
    FUNCTION        shift and go to state 18

    declaration                    shift and go to state 6
    declarations                   shift and go to state 24
    empty                          shift and go to state 7
    constantDefinitionBlock        shift and go to state 8
    typeDeclarationBlock           shift and go to state 9
    variableDeclarationBlock       shift and go to state 10
    procedureAndFunctionDeclarationBlock shift and go to state 11
    procedureDeclaration           shift and go to state 15
    functionDeclaration            shift and go to state 16

state 7

    (6) declarations -> empty .

    BEGIN           reduce using rule 6 (declarations -> empty .)


state 8

    (7) declaration -> constantDefinitionBlock .

    CONST           reduce using rule 7 (declaration -> constantDefinitionBlock .)
    TYPE            reduce using rule 7 (declaration -> constantDefinitionBlock .)
    VAR             reduce using rule 7 (declaration -> constantDefinitionBlock .)
    PROCEDURE       reduce using rule 7 (declaration -> constantDefinitionBlock .)
    FUNCTION        reduce using rule 7 (declaration -> constantDefinitionBlock .)
    BEGIN           reduce using rule 7 (declaration -> constantDefinitionBlock .)


state 9

    (8) declaration -> typeDeclarationBlock .

    CONST           reduce using rule 8 (declaration -> typeDeclarationBlock .)
    TYPE            reduce using rule 8 (declaration -> typeDeclarationBlock .)
    VAR             reduce using rule 8 (declaration -> typeDeclarationBlock .)
    PROCEDURE       reduce using rule 8 (declaration -> typeDeclarationBlock .)
    FUNCTION        reduce using rule 8 (declaration -> typeDeclarationBlock .)
    BEGIN           reduce using rule 8 (declaration -> typeDeclarationBlock .)


state 10

    (9) declaration -> variableDeclarationBlock .

    CONST           reduce using rule 9 (declaration -> variableDeclarationBlock .)
    TYPE            reduce using rule 9 (declaration -> variableDeclarationBlock .)
    VAR             reduce using rule 9 (declaration -> variableDeclarationBlock .)
    PROCEDURE       reduce using rule 9 (declaration -> variableDeclarationBlock .)
    FUNCTION        reduce using rule 9 (declaration -> variableDeclarationBlock .)
    BEGIN           reduce using rule 9 (declaration -> variableDeclarationBlock .)


state 11

    (10) declaration -> procedureAndFunctionDeclarationBlock .

    CONST           reduce using rule 10 (declaration -> procedureAndFunctionDeclarationBlock .)
    TYPE            reduce using rule 10 (declaration -> procedureAndFunctionDeclarationBlock .)
    VAR             reduce using rule 10 (declaration -> procedureAndFunctionDeclarationBlock .)
    PROCEDURE       reduce using rule 10 (declaration -> procedureAndFunctionDeclarationBlock .)
    FUNCTION        reduce using rule 10 (declaration -> procedureAndFunctionDeclarationBlock .)
    BEGIN           reduce using rule 10 (declaration -> procedureAndFunctionDeclarationBlock .)


state 12

    (11) constantDefinitionBlock -> CONST . constantDefinitionList
    (12) constantDefinitionList -> . constantDefinitionList constantDefinition SEMI
    (13) constantDefinitionList -> . constantDefinition SEMI
    (14) constantDefinition -> . identifier EQUAL constant
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    constantDefinitionList         shift and go to state 25
    constantDefinition             shift and go to state 26
    identifier                     shift and go to state 27

state 13

    (29) typeDeclarationBlock -> TYPE . typeDefinitionList
    (30) typeDefinitionList -> . typeDefinitionList typeDefinition SEMI
    (31) typeDefinitionList -> . typeDefinition SEMI
    (32) typeDefinition -> . identifier EQUAL type_
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    typeDefinitionList             shift and go to state 28
    typeDefinition                 shift and go to state 29
    identifier                     shift and go to state 30

state 14

    (76) variableDeclarationBlock -> VAR . variableDeclarationList SEMI
    (77) variableDeclarationList -> . variableDeclarationList SEMI variableDeclaration
    (78) variableDeclarationList -> . variableDeclaration
    (79) variableDeclaration -> . identifierList COLON type_
    (39) identifierList -> . identifierList COMMA identifier
    (40) identifierList -> . identifier
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    variableDeclarationList        shift and go to state 31
    variableDeclaration            shift and go to state 32
    identifierList                 shift and go to state 33
    identifier                     shift and go to state 34

state 15

    (80) procedureAndFunctionDeclarationBlock -> procedureDeclaration . SEMI

    SEMI            shift and go to state 35


state 16

    (81) procedureAndFunctionDeclarationBlock -> functionDeclaration . SEMI

    SEMI            shift and go to state 36


state 17

    (82) procedureDeclaration -> PROCEDURE . identifier SEMI block
    (83) procedureDeclaration -> PROCEDURE . identifier formalParameterList_opt SEMI block
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    identifier                     shift and go to state 37

state 18

    (94) functionDeclaration -> FUNCTION . identifier formalParameterList_opt COLON resultType SEMI block
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    identifier                     shift and go to state 38

state 19

    (2) programHeading -> PROGRAM identifier . SEMI

    SEMI            shift and go to state 39


state 20

    (3) identifier -> IDENT .

    SEMI            reduce using rule 3 (identifier -> IDENT .)
    EQUAL           reduce using rule 3 (identifier -> IDENT .)
    COLON           reduce using rule 3 (identifier -> IDENT .)
    COMMA           reduce using rule 3 (identifier -> IDENT .)
    LPAREN          reduce using rule 3 (identifier -> IDENT .)
    LBRACK          reduce using rule 3 (identifier -> IDENT .)
    END             reduce using rule 3 (identifier -> IDENT .)
    ASSIGN          reduce using rule 3 (identifier -> IDENT .)
    STAR            reduce using rule 3 (identifier -> IDENT .)
    SLASH           reduce using rule 3 (identifier -> IDENT .)
    DIV             reduce using rule 3 (identifier -> IDENT .)
    MOD             reduce using rule 3 (identifier -> IDENT .)
    AND             reduce using rule 3 (identifier -> IDENT .)
    NOT_EQUAL       reduce using rule 3 (identifier -> IDENT .)
    LT              reduce using rule 3 (identifier -> IDENT .)
    LE              reduce using rule 3 (identifier -> IDENT .)
    GT              reduce using rule 3 (identifier -> IDENT .)
    GE              reduce using rule 3 (identifier -> IDENT .)
    IN              reduce using rule 3 (identifier -> IDENT .)
    PLUS            reduce using rule 3 (identifier -> IDENT .)
    MINUS           reduce using rule 3 (identifier -> IDENT .)
    OR              reduce using rule 3 (identifier -> IDENT .)
    THEN            reduce using rule 3 (identifier -> IDENT .)
    DO              reduce using rule 3 (identifier -> IDENT .)
    UNTIL           reduce using rule 3 (identifier -> IDENT .)
    RPAREN          reduce using rule 3 (identifier -> IDENT .)
    RBRACK          reduce using rule 3 (identifier -> IDENT .)
    ELSE            reduce using rule 3 (identifier -> IDENT .)
    TO              reduce using rule 3 (identifier -> IDENT .)
    DOWNTO          reduce using rule 3 (identifier -> IDENT .)


state 21

    (1) program -> programHeading block DOT .

    $end            reduce using rule 1 (program -> programHeading block DOT .)


state 22

    (4) block -> declarations compoundStatement .

    DOT             reduce using rule 4 (block -> declarations compoundStatement .)
    SEMI            reduce using rule 4 (block -> declarations compoundStatement .)


state 23

    (96) compoundStatement -> BEGIN . statements END
    (97) statements -> . statementList
    (98) statementList -> . statementList SEMI statement
    (99) statementList -> . statement
    (100) statement -> . simpleStatement
    (101) statement -> . structuredStatement
    (102) simpleStatement -> . callStatement
    (103) simpleStatement -> . assignmentStatement
    (104) simpleStatement -> . emptyStatement_
    (148) structuredStatement -> . compoundStatement
    (149) structuredStatement -> . conditionalStatement
    (150) structuredStatement -> . loopStatement
    (139) callStatement -> . identifier
    (140) callStatement -> . identifier LPAREN expressionList RPAREN
    (105) assignmentStatement -> . variable ASSIGN Init_Final
    (147) emptyStatement_ -> .
    (96) compoundStatement -> . BEGIN statements END
    (160) conditionalStatement -> . ifStatement
    (151) loopStatement -> . forStatement
    (152) loopStatement -> . whileStatement
    (153) loopStatement -> . repeatStatement
    (3) identifier -> . IDENT
    (106) variable -> . identifier
    (107) variable -> . indexedVariable
    (161) ifStatement -> . IF expression THEN statement
    (162) ifStatement -> . IF expression THEN statement ELSE statement
    (154) forStatement -> . FOR identifier ASSIGN Init_Final TO Init_Final DO statement
    (155) forStatement -> . FOR identifier ASSIGN Init_Final DOWNTO Init_Final DO statement
    (158) whileStatement -> . WHILE expression DO statement
    (159) repeatStatement -> . REPEAT statements UNTIL expression
    (108) indexedVariable -> . identifier LBRACK expression RBRACK

    SEMI            reduce using rule 147 (emptyStatement_ -> .)
    END             reduce using rule 147 (emptyStatement_ -> .)
    BEGIN           shift and go to state 23
    IDENT           shift and go to state 20
    IF              shift and go to state 58
    FOR             shift and go to state 59
    WHILE           shift and go to state 60
    REPEAT          shift and go to state 61

    statements                     shift and go to state 40
    statementList                  shift and go to state 41
    statement                      shift and go to state 42
    simpleStatement                shift and go to state 43
    structuredStatement            shift and go to state 44
    callStatement                  shift and go to state 45
    assignmentStatement            shift and go to state 46
    emptyStatement_                shift and go to state 47
    compoundStatement              shift and go to state 48
    conditionalStatement           shift and go to state 49
    loopStatement                  shift and go to state 50
    identifier                     shift and go to state 51
    variable                       shift and go to state 52
    ifStatement                    shift and go to state 53
    forStatement                   shift and go to state 54
    whileStatement                 shift and go to state 55
    repeatStatement                shift and go to state 56
    indexedVariable                shift and go to state 57

state 24

    (5) declarations -> declaration declarations .

    BEGIN           reduce using rule 5 (declarations -> declaration declarations .)


state 25

    (11) constantDefinitionBlock -> CONST constantDefinitionList .
    (12) constantDefinitionList -> constantDefinitionList . constantDefinition SEMI
    (14) constantDefinition -> . identifier EQUAL constant
    (3) identifier -> . IDENT

    CONST           reduce using rule 11 (constantDefinitionBlock -> CONST constantDefinitionList .)
    TYPE            reduce using rule 11 (constantDefinitionBlock -> CONST constantDefinitionList .)
    VAR             reduce using rule 11 (constantDefinitionBlock -> CONST constantDefinitionList .)
    PROCEDURE       reduce using rule 11 (constantDefinitionBlock -> CONST constantDefinitionList .)
    FUNCTION        reduce using rule 11 (constantDefinitionBlock -> CONST constantDefinitionList .)
    BEGIN           reduce using rule 11 (constantDefinitionBlock -> CONST constantDefinitionList .)
    IDENT           shift and go to state 20

    constantDefinition             shift and go to state 62
    identifier                     shift and go to state 27

state 26

    (13) constantDefinitionList -> constantDefinition . SEMI

    SEMI            shift and go to state 63


state 27

    (14) constantDefinition -> identifier . EQUAL constant

    EQUAL           shift and go to state 64


state 28

    (29) typeDeclarationBlock -> TYPE typeDefinitionList .
    (30) typeDefinitionList -> typeDefinitionList . typeDefinition SEMI
    (32) typeDefinition -> . identifier EQUAL type_
    (3) identifier -> . IDENT

    CONST           reduce using rule 29 (typeDeclarationBlock -> TYPE typeDefinitionList .)
    TYPE            reduce using rule 29 (typeDeclarationBlock -> TYPE typeDefinitionList .)
    VAR             reduce using rule 29 (typeDeclarationBlock -> TYPE typeDefinitionList .)
    PROCEDURE       reduce using rule 29 (typeDeclarationBlock -> TYPE typeDefinitionList .)
    FUNCTION        reduce using rule 29 (typeDeclarationBlock -> TYPE typeDefinitionList .)
    BEGIN           reduce using rule 29 (typeDeclarationBlock -> TYPE typeDefinitionList .)
    IDENT           shift and go to state 20

    typeDefinition                 shift and go to state 65
    identifier                     shift and go to state 30

state 29

    (31) typeDefinitionList -> typeDefinition . SEMI

    SEMI            shift and go to state 66


state 30

    (32) typeDefinition -> identifier . EQUAL type_

    EQUAL           shift and go to state 67


state 31

    (76) variableDeclarationBlock -> VAR variableDeclarationList . SEMI
    (77) variableDeclarationList -> variableDeclarationList . SEMI variableDeclaration

    SEMI            shift and go to state 68


state 32

    (78) variableDeclarationList -> variableDeclaration .

    SEMI            reduce using rule 78 (variableDeclarationList -> variableDeclaration .)


state 33

    (79) variableDeclaration -> identifierList . COLON type_
    (39) identifierList -> identifierList . COMMA identifier

    COLON           shift and go to state 69
    COMMA           shift and go to state 70


state 34

    (40) identifierList -> identifier .

    COLON           reduce using rule 40 (identifierList -> identifier .)
    COMMA           reduce using rule 40 (identifierList -> identifier .)
    RPAREN          reduce using rule 40 (identifierList -> identifier .)


state 35

    (80) procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .

    CONST           reduce using rule 80 (procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .)
    TYPE            reduce using rule 80 (procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .)
    VAR             reduce using rule 80 (procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .)
    PROCEDURE       reduce using rule 80 (procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .)
    FUNCTION        reduce using rule 80 (procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .)
    BEGIN           reduce using rule 80 (procedureAndFunctionDeclarationBlock -> procedureDeclaration SEMI .)


state 36

    (81) procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .

    CONST           reduce using rule 81 (procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .)
    TYPE            reduce using rule 81 (procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .)
    VAR             reduce using rule 81 (procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .)
    PROCEDURE       reduce using rule 81 (procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .)
    FUNCTION        reduce using rule 81 (procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .)
    BEGIN           reduce using rule 81 (procedureAndFunctionDeclarationBlock -> functionDeclaration SEMI .)


state 37

    (82) procedureDeclaration -> PROCEDURE identifier . SEMI block
    (83) procedureDeclaration -> PROCEDURE identifier . formalParameterList_opt SEMI block
    (84) formalParameterList_opt -> . formalParameterList
    (85) formalParameterList_opt -> . empty
    (86) formalParameterList -> . LPAREN formalParameterSectionList RPAREN
    (163) empty -> .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 71
    LPAREN          shift and go to state 75

  ! SEMI            [ reduce using rule 163 (empty -> .) ]

    formalParameterList_opt        shift and go to state 72
    formalParameterList            shift and go to state 73
    empty                          shift and go to state 74

state 38

    (94) functionDeclaration -> FUNCTION identifier . formalParameterList_opt COLON resultType SEMI block
    (84) formalParameterList_opt -> . formalParameterList
    (85) formalParameterList_opt -> . empty
    (86) formalParameterList -> . LPAREN formalParameterSectionList RPAREN
    (163) empty -> .

    LPAREN          shift and go to state 75
    COLON           reduce using rule 163 (empty -> .)

    formalParameterList_opt        shift and go to state 76
    formalParameterList            shift and go to state 73
    empty                          shift and go to state 74

state 39

    (2) programHeading -> PROGRAM identifier SEMI .

    CONST           reduce using rule 2 (programHeading -> PROGRAM identifier SEMI .)
    TYPE            reduce using rule 2 (programHeading -> PROGRAM identifier SEMI .)
    VAR             reduce using rule 2 (programHeading -> PROGRAM identifier SEMI .)
    PROCEDURE       reduce using rule 2 (programHeading -> PROGRAM identifier SEMI .)
    FUNCTION        reduce using rule 2 (programHeading -> PROGRAM identifier SEMI .)
    BEGIN           reduce using rule 2 (programHeading -> PROGRAM identifier SEMI .)


state 40

    (96) compoundStatement -> BEGIN statements . END

    END             shift and go to state 77


state 41

    (97) statements -> statementList .
    (98) statementList -> statementList . SEMI statement

    END             reduce using rule 97 (statements -> statementList .)
    UNTIL           reduce using rule 97 (statements -> statementList .)
    SEMI            shift and go to state 78


state 42

    (99) statementList -> statement .

    SEMI            reduce using rule 99 (statementList -> statement .)
    END             reduce using rule 99 (statementList -> statement .)
    UNTIL           reduce using rule 99 (statementList -> statement .)


state 43

    (100) statement -> simpleStatement .

    SEMI            reduce using rule 100 (statement -> simpleStatement .)
    END             reduce using rule 100 (statement -> simpleStatement .)
    UNTIL           reduce using rule 100 (statement -> simpleStatement .)
    ELSE            reduce using rule 100 (statement -> simpleStatement .)


state 44
